--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-NAV
-It has an embedded image that represents a logo.
-The logo is aligned to the leftmost part of the navbar.
-It has an input tag that represents a search bar.
-The search bar is aligned to the middle of the navbar.
-It has a button tag that represents the search button.
-The search button is at the end (rightmost part) of the search bar.
-It has at least three embedded images on the rightmost part of the navbar that represent icons and/or an avatar.
-
 <!DOCTYPE HTML>
 
 <html>
@@ -19,11 +10,15 @@ It has at least three embedded images on the rightmost part of the navbar that r
 <body>
 
 	<header>
-        <nav><img src="#" id="logo">--aligned to the left.
-          <input type="search" placeholder="Search">--alighned to the middle
+        <nav>
+            <img src="https://img.icons8.com/color/48/000000/menu.png" alt="menu_logo" style="width:20px; height:20px;" />
+            <img src="C:\Users\Tamar\OneDrive\Desktop\First_Html-CSS_Project\images\youtube_logo.png" alt="youtube_logo" style="width:80px; height:24px;">
+          <input type="search" placeholder="Search">
           <button type="button">
             <i style="font-size: 16px; color: white; opacity: .9;" class="lni-search"></i>
-            <span style="font-size:16px; color: white">Search</span>
+            <span style="font-size:16px; color: grey;  padding: 4px; margin-top: 6px; margin-right: 16px;"> 
+                <img src="https://img.icons8.com/ios/50/000000/search--v1.png"  style="width:15px; height:20px;" alt="search_icon">  </span>
+           
         </button>
     </div>
     <div class="icon_div">
