css file and initial style added

--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>   </title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>Youtube</title>
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
 	<header>
         <nav>
-            <img src="https://img.icons8.com/color/48/000000/menu.png" alt="menu_logo" style="width:20px; height:20px;" />
-            <img src="C:\Users\Tamar\OneDrive\Desktop\First_Html-CSS_Project\images\youtube_logo.png" alt="youtube_logo" style="width:80px; height:24px;">
-          <input type="search" placeholder="Search">
+            <img src="https://img.icons8.com/color/48/000000/menu.png" alt="menu_logo" style="width:20px; height:20px;" class="menu_logo"/>
+            <img src="images/youtube_logo.png" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo"/>
+          <input type="search" placeholder="Search" id="search_bar">
           <button type="button">
             <i style="font-size: 16px; color: white; opacity: .9;" class="lni-search"></i>
             <span style="font-size:16px; color: grey;  padding: 4px; margin-top: 6px; margin-right: 16px;"> 
-                <img src="https://img.icons8.com/ios/50/000000/search--v1.png"  style="width:15px; height:20px;" alt="search_icon">  </span>
+                <img src="https://img.icons8.com/ios/50/000000/search--v1.png"  style="width:15px; height:20px;" alt="search_icon" class="search_icon"/>  </span>
            
         </button>
     </div>
@@ -53,43 +54,43 @@
 
 	<aside>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
 		</p>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/A_DC7EhADas" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
 		</p>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
 		</p>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/dSl_qnWO104" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
 		</p>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
 		</p>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/_NrSWLQsDL4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
 		</p>
 		<p>
-			<p><iframe width="100" height="100" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" ></iframe></p>
 			<h2>Contributing to Open Source Part I: The Easy Way </h2>
 			<a href="#comments">6 comments</a>
 			<h1>Article title</h1>
