--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,115 +11,155 @@
 </head>
 
 <body>
-
 	<header>
-<!--youtube logo and menu icon-->
-<main>	 
-<nav>
-           <div class="left-side-links">
+		<!--youtube logo and menu icon-->
 
-            <img src="https://img.icons8.com/color/48/000000/menu.png" alt="menu_logo" style="width:20px; height:20px;" class="menu_logo"/>
-			<img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
-			" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo"/>
-			
-		</div>
-<!--searh bar-->
-		<div class="search_bar">
-          <input type="search" placeholder="Search" id="search_bar">
-          <button type="button"> 
-                <img src="https://img.icons8.com/ios/50/000000/search--v1.png"  style="width:15px; height:20px;" alt="search_icon" class="search_icon"/>  </span>   
-		</button>
-	</div>
-	
-	<!--right side of the search bar-->
-	<div class="right-nav-links">
-		<i class="fas fa-upload"></i>
-	<button type="button">Sign In</button>
-	
-	</div>
-        
+		<nav>
+			<div class="left-side-links">
+
+				<img src="https://img.icons8.com/color/48/000000/menu.png" alt="menu_logo"
+					style="width:20px; height:20px;" class="menu_logo" />
+				<img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
+			" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo" />
+
+			</div>
+			<!--searh bar-->
+			<div class="search_bar">
+				<input type="search" placeholder="Search" id="search_bar">
+				<button type="button" class="search_button"><i class="fas fa-search"></i></button>
+			</div>
+
+			<!--right side of the search bar-->
+			<div class="right-nav-links">
+				<button type="button" class="fas fa-upload"></button>
+				<button type="button">Sign In</button>
+
+			</div>
+		</nav>
 	</header>
 	<!--Videos-->
 	<section class="video_player">
-		<figure class="main-video">	
-			<p>
-				<p><iframe width="560" height="315" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+		<figure class="main-video">
+			<div>
+				<p><iframe width="560" height="315" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe></p>
 				<h2>Contributing to Open Source Part I: The Easy Way </h2>
-				<a href="#comments">6 comments</a>
-			
-			</p>
-</figure>
+				<button type="button">T</button>
+				<button type="button">Subscribe</button>
+
+			</div>
+			<div class="interaction_buttons_left">
+
+				<button type="button" class="fas fa-folder-plus"></button>
+				<button type="button" class="fas fa-share"></button>
+				<button type="button" class="fas fa-ellipsis-h"></button>
+			</div>
+			<div class="interaction_buttons_right">
+				<button type="button" class="fas fa-thumbs-up"></button>
+				<label>359</label>
+				<button type="button" class="fas fa-thumbs-down"></button>
+				<label>14</label>
+			</div>
+		</figure>
 	</section>
-<!--comments and description-->
-<hr>
-<section id="description">
+	<!--comments and description-->
+	<hr>
+	<section id="description">
 
-<figcaption id="description_text">
-	<p id="author">The Odin Project</p>
-	<p id="images"> <img></p>
-<div class="Likes_bar">   contains likes imgs</div>
+		<figcaption id="description_text">
+			<p id="author">The Odin Project</p>
+			<p id="images"></p>
+			<div class="Likes_bar"> contains likes imgs</div>
 
-<p id="authors_text">
-	Published on Feb 27, 2014
-How do you contribute to open source? In this video, I'll describe the easiest way to make a simple<br />
- contribution to an open source project -- without using the command line, a text editor, "forking a repo", or<br />
-  even touching Git outside of Github. I'll also describe what kinds of contributions open source software projects are<br />
-   typically looking for. As an example, I use submitting a student solution to a web development exercise from The Odin Project,<br />
-	a free online curriculum for learning web development with Ruby on Rails. You can find more information about that project <br />
-	at http://theodinproject.com.<br />
+			<p id="authors_text">
+				Published on Feb 27, 2014
+				How do you contribute to open source? In this video, I'll describe the easiest way to make a
+				simple<br />
+				contribution to an open source project -- without using the command line, a text editor, "forking a
+				repo", or<br />
+				even touching Git outside of Github. I'll also describe what kinds of contributions open source software
+				projects are<br />
+				typically looking for. As an example, I use submitting a student solution to a web development exercise
+				from The Odin Project,<br />
+				a free online curriculum for learning web development with Ruby on Rails. You can find more information
+				about that project <br />
+				at http://theodinproject.com.<br />
 
-	</p>
-<button type="button" id="show_more">SHOW MORE </button>
-
-
-</figcaption>
-<!--side videos-->
-	<aside>
-<figure class="side_videos">
-
-		<p>
-			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-			<h2>Contributing to Open Source Part II: The Easy Way </h2>
-			<a href="#comments">6 comments</a>
-			
-		</p>
-		<p>
-			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/A_DC7EhADas" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-			<h2>How To Contribute To The Open Source Community? </h2>
-			<a href="#comments">6 comments</a>
-		</p>
-		<p>
-			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-			<h2>Contributing to Open Source on GitHub for beginners </h2>
-			<a href="#comments">6 comments</a>
-		</p>
-		<p>
-			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/dSl_qnWO104" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-			<h2>Your First GitHub Pull Request (in 10 Mins)</h2>
-			<a href="#comments">6 comments</a>
-		</p>
-		<p>
-			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-			<h2>1.3: Forks and Pull Requests - Git and GitHub for Poets </h2>
-			<a href="#comments">6 comments</a>
-		</p>
-		
-		<p>
-			<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" ></iframe></p>
-			<h2>Contributing to Open Source Part II: The Real Way </h2>
-			<a href="#comments">6 comments</a>
-		</p>
-</figure>
-
-</aside>
+			</p>
+			<button type="button" id="show_more">SHOW MORE </button>
 
 
+		</figcaption>
+		<!--side videos-->
+		<aside>
+			<figure class="side_videos">
 
+				<p>
+					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe></p>
+					<h2>Contributing to Open Source Part II: The Easy Way </h2>
+					<a href="#comments">6 comments</a>
 
-	<footer>
-		<p></p>
-	</footer>
-</main>
+				</p>
+				<p>
+					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/A_DC7EhADas" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
+					<h2>How To Contribute To The Open Source Community? </h2>
+					<a href="#comments">6 comments</a>
+				</p>
+				<p>
+					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
+					<h2>Contributing to Open Source on GitHub for beginners </h2>
+					<a href="#comments">6 comments</a>
+				</p>
+				<p>
+					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/dSl_qnWO104" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
+					<h2>Your First GitHub Pull Request (in 10 Mins)</h2>
+					<a href="#comments">6 comments</a>
+				</p>
+				<p>
+					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
+					<h2>1.3: Forks and Pull Requests - Git and GitHub for Poets </h2>
+					<a href="#comments">6 comments</a>
+				</p>
+
+				<p>
+					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
+					<h2>Contributing to Open Source Part II: The Real Way </h2>
+					<a href="#comments">6 comments</a>
+				</p>
+			</figure>
+
+		</aside>
+
+		<footer>
+			<div>
+				<button type="button"><img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
+					" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo" /></button>
+				<div class="dropdown">
+					<button class="dropbtn" disabled>English
+						<i class="fa fa-caret-down"></i>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="dropbtn" disabled>English
+						<i class="fa fa-caret-down"></i>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="dropbtn" disabled>English
+						<i class="fa fa-caret-down"></i>
+					</button>
+				</div>
+				<button type="button"><i class="fas fa-hourglass-half"></i>History</button>
+			</div>
+		</footer>
 </body>
 
 </html>
