--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@
 			<div>
 				<p><iframe width="560" height="315" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
 						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe></p>
-				<h2>Contributing to Open Source Part I: The Easy Way </h2>
-				<button type="button">T</button>
+						allowfullscreen></iframe></p> 
+					
+			</div>
+			
+				<div class="info_box">
+						<h2 style= font-size:20px;>Contributing to Open Source Part I: The Easy Way </h2>
+				<button type="button" id="T_button">T</button>
+				<p id="author">The Odin Project</p>
 				<button type="button">Subscribe</button>
 
-			</div>
+			
 			<div class="interaction_buttons_left">
 
 				<button type="button" class="fas fa-folder-plus"></button>
@@ -60,17 +65,18 @@
 				<label>359</label>
 				<button type="button" class="fas fa-thumbs-down"></button>
 				<label>14</label>
-			</div>
+			</div> 
+		     </div>
 		</figure>
 	</section>
 	<!--comments and description-->
 	<hr>
 	<section id="description">
-
+<div id ="flex-container">
 		<figcaption id="description_text">
-			<p id="author">The Odin Project</p>
-			<p id="images"></p>
-			<div class="Likes_bar"> contains likes imgs</div>
+		
+		
+			
 
 			<p id="authors_text">
 				Published on Feb 27, 2014
@@ -87,13 +93,13 @@
 				at http://theodinproject.com.<br />
 
 			</p>
-			<button type="button" id="show_more">SHOW MORE </button>
+			<button type="button" id="show_more">SHOW MORE </button></div>
 
 
 		</figcaption>
 		<!--side videos-->
-		<aside>
-			<figure class="side_videos">
+		<aside class="flex-container">
+			<figure>
 
 				<p>
 					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
@@ -107,32 +113,37 @@
 					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/A_DC7EhADas" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 					<h2>How To Contribute To The Open Source Community? </h2>
-					<a href="#comments">6 comments</a>
+					<a href="#comments"> The Odin Project<br />
+					193,000 views </a>
 				</p>
 				<p>
 					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 					<h2>Contributing to Open Source on GitHub for beginners </h2>
-					<a href="#comments">6 comments</a>
+					<a href="#comments"> The Odin Project<br />
+						200,000 views</a>
 				</p>
 				<p>
 					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/dSl_qnWO104" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 					<h2>Your First GitHub Pull Request (in 10 Mins)</h2>
-					<a href="#comments">6 comments</a>
+					<a href="#comments"> The Odin Project<br />
+						193,000 views</a>
 				</p>
 				<p>
 					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 					<h2>1.3: Forks and Pull Requests - Git and GitHub for Poets </h2>
-					<a href="#comments">6 comments</a>
+					<a href="#comments"> The Odin Project<br />
+						193,000 views</a>
 				</p>
 
 				<p>
 					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
 					<h2>Contributing to Open Source Part II: The Real Way </h2>
-					<a href="#comments">6 comments</a>
+					<a href="#comments"> The Odin Project<br />
+						193,000 views</a>
 				</p>
 			</figure>
 
@@ -143,17 +154,17 @@
 				<button type="button"><img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
 					" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo" /></button>
 				<div class="dropdown">
-					<button class="dropbtn" disabled>English
+					<button class="dropbtn" disabled>Language: English
 						<i class="fa fa-caret-down"></i>
 					</button>
 				</div>
 				<div class="dropdown">
-					<button class="dropbtn" disabled>English
+					<button class="dropbtn" disabled>Location:Netherlands
 						<i class="fa fa-caret-down"></i>
 					</button>
 				</div>
 				<div class="dropdown">
-					<button class="dropbtn" disabled>English
+					<button class="dropbtn" disabled>Restricted Mode:Off
 						<i class="fa fa-caret-down"></i>
 					</button>
 				</div>
