--- a/index.html
+++ b/index.html
@@ -40,20 +40,17 @@
 	<!--Videos-->
 	<section class="video_player">
 		<figure class="main-video">
-			<div>
-				<p><iframe width="560" height="315" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
-						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe></p> 
-					
-			</div>
-			
-				<div class="info_box">
-						<h2 style= font-size:20px;>Contributing to Open Source Part I: The Easy Way </h2>
-				<button type="button" id="T_button">T</button>
-				<p id="author">The Odin Project</p>
-				<button type="button">Subscribe</button>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
+				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</figure>
 
-			
+		<div class="info_box">
+			<h2 style=font-size:20px;>Contributing to Open Source Part I: The Easy Way </h2>
+			<button type="button" id="T_button">T</button>
+			<p id="author">The Odin Project</p>
+			<button type="button">Subscribe</button>
+
 			<div class="interaction_buttons_left">
 
 				<button type="button" class="fas fa-folder-plus"></button>
@@ -65,86 +62,44 @@
 				<label>359</label>
 				<button type="button" class="fas fa-thumbs-down"></button>
 				<label>14</label>
-			</div> 
-		     </div>
-		</figure>
+			</div>
+		</div>
+
 	</section>
 	<!--comments and description-->
-	<hr>
+	
 	<section id="description">
-<div id ="flex-container">
-		<figcaption id="description_text">
 		
-		
-			
+			<div id="description_text">
+				<p id="authors_text">
+					Published on Feb 27, 2014
+					How do you contribute to open source? In this video, I'll describe the easiest way to make a
+					simple<br />
+					contribution to an open source project -- without using the command line, a text editor, "forking a
+					repo", or<br />
+					even touching Git outside of Github. I'll also describe what kinds of contributions open source
+					software
+					projects are<br />
+					typically looking for. As an example, I use submitting a student solution to a web development
+					exercise
+					from The Odin Project,<br />
+					a free online curriculum for learning web development with Ruby on Rails. You can find more
+					information
+					about that project <br />
+					at http://theodinproject.com.<br />
 
-			<p id="authors_text">
-				Published on Feb 27, 2014
-				How do you contribute to open source? In this video, I'll describe the easiest way to make a
-				simple<br />
-				contribution to an open source project -- without using the command line, a text editor, "forking a
-				repo", or<br />
-				even touching Git outside of Github. I'll also describe what kinds of contributions open source software
-				projects are<br />
-				typically looking for. As an example, I use submitting a student solution to a web development exercise
-				from The Odin Project,<br />
-				a free online curriculum for learning web development with Ruby on Rails. You can find more information
-				about that project <br />
-				at http://theodinproject.com.<br />
-
-			</p>
-			<button type="button" id="show_more">SHOW MORE </button></div>
-
-
-		</figcaption>
+				</p>
+				<button type="button" id="show_more">SHOW MORE </button>
+			</div>
 		<!--side videos-->
-		<aside class="flex-container">
+		<aside>
 			<figure>
-
-				<p>
-					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
+					<iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></p>
+							allowfullscreen></iframe>
 					<h2>Contributing to Open Source Part II: The Easy Way </h2>
 					<a href="#comments">6 comments</a>
 
-				</p>
-				<p>
-					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/A_DC7EhADas" frameborder="0"
-							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-					<h2>How To Contribute To The Open Source Community? </h2>
-					<a href="#comments"> The Odin Project<br />
-					193,000 views </a>
-				</p>
-				<p>
-					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
-							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-					<h2>Contributing to Open Source on GitHub for beginners </h2>
-					<a href="#comments"> The Odin Project<br />
-						200,000 views</a>
-				</p>
-				<p>
-					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/dSl_qnWO104" frameborder="0"
-							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-					<h2>Your First GitHub Pull Request (in 10 Mins)</h2>
-					<a href="#comments"> The Odin Project<br />
-						193,000 views</a>
-				</p>
-				<p>
-					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
-							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-					<h2>1.3: Forks and Pull Requests - Git and GitHub for Poets </h2>
-					<a href="#comments"> The Odin Project<br />
-						193,000 views</a>
-				</p>
-
-				<p>
-					<p><iframe width="120" height="90" src="https://www.youtube.com/embed/mENDYhfxH-o" frameborder="0"
-							allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe></p>
-					<h2>Contributing to Open Source Part II: The Real Way </h2>
-					<a href="#comments"> The Odin Project<br />
-						193,000 views</a>
-				</p>
 			</figure>
 
 		</aside>
@@ -171,6 +126,7 @@
 				<button type="button"><i class="fas fa-hourglass-half"></i>History</button>
 			</div>
 		</footer>
+	</section>
 </body>
 
 </html>
