editted the HTML and CSS structure

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<!--searh bar-->
 			<div class="search_bar">
-				<input type="search" placeholder="Search" id="search_bar">
+				<input type="search" placeholder="Search" id="search_bar_length">
 				<button type="button" class="search_button"><i class="fas fa-search"></i></button>
 			</div>
 
@@ -38,9 +38,11 @@
 		</nav>
 	</header>
 	<!--Videos-->
-	<section class="video_player">
+	
+	<section id ="group">
+	<section>
 		<figure class="main-video">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
+			<iframe width="560" height="300" src="https://www.youtube.com/embed/k6KcaMffxac" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 		</figure>
@@ -65,10 +67,10 @@
 			</div>
 		</div>
 
-	</section>
+	
 	<!--comments and description-->
 	
-	<section id="description">
+
 		
 			<div id="description_text">
 				<p id="authors_text">
@@ -88,9 +90,15 @@
 					about that project <br />
 					at http://theodinproject.com.<br />
 
+
+				<br />	<button type="button" id="show_more">SHOW MORE </button>
+			
 				</p>
-				<button type="button" id="show_more">SHOW MORE </button>
 			</div>
+			</section>
+
+
+
 		<!--side videos-->
 		<aside>
 			<figure>
@@ -104,7 +112,11 @@
 
 		</aside>
 
-		<footer>
+
+</section>
+
+
+		<footer >
 			<div>
 				<button type="button"><img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
 					" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo" /></button>
@@ -126,7 +138,7 @@
 				<button type="button"><i class="fas fa-hourglass-half"></i>History</button>
 			</div>
 		</footer>
-	</section>
+	
 </body>
 
 </html>
