--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<!--searh bar-->
 			<div class="search_bar">
 				<input type="search" placeholder="Search" id="search_bar_length">
-				<button type="button" class="search_button"><i class="fas fa-search"></i></button>
+				<button type="button" id="search_button"><i class="fas fa-search"></i></button>
 			</div>
 
 			<!--right side of the search bar-->
@@ -142,3 +142,5 @@
 </body>
 
 </html>
+
+
