correction made on nav bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<nav>
-			<div class="left-side-links">
+			<div class="nav left-side-links">
 				<img src="https://img.icons8.com/color/48/000000/menu.png" alt="menu_logo"
 					style="width:20px; height:20px;" class="menu_logo" />
 				<img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
@@ -20,15 +20,15 @@
 
 			</div>
 			<!--searh bar-->
-			<div class="search_bar">
+			<div class="nav search_bar">
 				<input type="search" placeholder="Search" id="search_bar_length">
 				<button type="button" id="search_button"><i class="fas fa-search"></i></button>
 			</div>
 
 			<!--right side of the search bar-->
-			<div class="right-nav-links">
+			<div class="nav right-nav-links">
 				<button type="button" class="fas fa-upload"></button>
-				<button type="button">Sign in</button>
+				<button type="button" class="signin">Sign in</button>
 
 			</div>
 		</nav>
