html and css restructured

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="index.css" />
 	<title>Youtube</title>
 </head>
-
 
 
 <body>
@@ -49,17 +48,6 @@
 					<a href="#"><i class="far fa-user-circle"></i></a>
 				</li>
 			</ul>
-
-
-
-
-
-
-
-
-
-
-
 		</nav>
 	</header>
 	<main class="flex-conatainer">
@@ -89,8 +77,8 @@
 
 				<div class="details">
 					<p>Title</p>
-					<p>Channel</p>
-					<p>Views</p>
+					<p> Got Talent Global</p>
+					<p>Recommended for you</p>
 				</div>
 			</div>
 
@@ -98,9 +86,9 @@
 				<img src="http://i3.ytimg.com/vi/tWg7xbTiDF4/maxresdefault.jpg" height="94" width="168">
 
 				<div class="details">
-					<p>Title</p>
-					<p>Channel</p>
-					<p>Views</p>
+					<p>KiDi - Sugar (The Movie)</p>
+					<p>Lynx Entertainment</p>
+					<p>549K</p>
 				</div>
 			</div>
 
@@ -109,38 +97,25 @@
 				<img src="http://i3.ytimg.com/vi/-DB3oND8hVA/maxresdefault.jpg" height="94" width="168">
 
 				<div class="details">
-					<p>Title</p>
-					<p>Channel</p>
-					<p>Views</p>
+					<p>Bosom P-Yung - Attaa Adwoa | A FLOWRHYTHMZ SHOW</p>
+					<p> Flowrhythmz</p>
+					<p>388 views</p>
 				</div>
 			</div>
 
 			<div class="recommended">
-				<img src="http://i3.ytimg.com/vi/lGNQzxzv6KA/maxresdefault.jpg" height="94" width="168">
+				<img src="http://i3.ytimg.com/vi/rCymbQJxozI/maxresdefault.jpg" height="94" width="168">
 
 				<div class="details">
-					<p>Title</p>
-					<p>Channel</p>
-					<p>Views</p>
+					<p>Joeboy - Don't Call Me Back (feat. Mayorkun) [Visualizer]</p>
+					<p> emPawa Africa</p>
+					<p>8.0M views</p>
 				</div>
 			</div>
 
 		</aside>
 
 	</main>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
