--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<main class="flex-conatainer">
 		<section class="video-section">
 			<div class="main-video">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/48YW53TPbhw"allowfullscreen></iframe>
+				<iframe width="840" height="315" src="https://www.youtube.com/embed/48YW53TPbhw"allowfullscreen></iframe>
 </div>
 
 
@@ -115,7 +115,17 @@
 
 		</aside>
 
+	
 	</main>
+
+	 <footer>
+
+youtube		 
+</footer>
+
+
+
+
 
 </body>
 
