added footer from previous code

--- a/index.html
+++ b/index.html
@@ -118,12 +118,30 @@
 	
 	</main>
 
-	 <footer>
-
-youtube		 
-</footer>
 
 
+	<footer >
+		<div>
+			<button type="button"><img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
+				" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo" /></button>
+			<div class="dropdown">
+				<button class="dropbtn" disabled>Language: English
+					<i class="fa fa-caret-down"></i>
+				</button>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn" disabled>Location:Netherlands
+					<i class="fa fa-caret-down"></i>
+				</button>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn" disabled>Restricted Mode:Off
+					<i class="fa fa-caret-down"></i>
+				</button>
+			</div>
+			<button type="button"><i class="fas fa-hourglass-half"></i>History</button>
+		</div>
+	</footer>
 
 
 
