added new html code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -54,21 +53,120 @@
 	<main class="flex-conatainer">
 		<section class="video-section">
 			<div class="main-video">
-				<iframe width="840" height="315" src="https://www.youtube.com/embed/48YW53TPbhw"allowfullscreen></iframe>
-</div>
+				<iframe width="840" height="315" src="https://www.youtube.com/embed/48YW53TPbhw"
+					allowfullscreen></iframe>
+			</div>
 
 
 			<article class="details">
 				<div class="title">
-					<h2 style=font-size:20px;>Contributing to Open Source Part I: The Easy Way </h2>
+					<h2 style=font-size:20px;> SHATTA WALE - Everybody Likes My Tin by PPV HD</h2>
 				</div>
+				<div class="interaction_buttons_left">
+					<button type="button" class="fas fa-thumbs-up"></button>
+					<label>359</label>
+					<button type="button" class="fas fa-thumbs-down"></button>
+					<label>14</label>
+					<button type="button" class="fas fa-share"></button>
+
+					<button type="button" class="fas fa-folder-plus"></button>
+					<button type="button" class="fas fa-ellipsis-h"></button>
+
+
+				</div>
+
 				<div id="description_text">
+
+
+					<p><button type="button" id="subscribe-button">SUBSCRIBE</button></p>
+					<a id="singers-logo" href="#"><img src="#" alt="singers-logo" /> </a>
 					<p id="authors_text">
-						SHATTA WALE - Everybody Likes My Tin by PPV HD
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />
+						sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br />
+						Sit amet luctus venenatis lectus magna fringilla urna .<br />
+						Adipiscing bibendum est ultricies integer quis.<br />
+						Amet aliquam id diam maecenas ultricies.<br />
+						Elementum eu facilisis sed odio morbi.
+						<a href="#" class="show-more bold-text">SHOW MORE</a>
 					</p>
+
+
 				</div>
+
 			</article>
 		</section>
+	</main>
+
+	<!--comments-->
+
+	<section class="comments-container">
+		<div class="comments-top">
+			<p class="categ-title">12 Comments</p>
+			<p class="grey-text bold-text"><i class="fas fa-sort-amount-up"></i>SORT BY</p>
+		</div>
+
+		<div class="comment-details">
+			<div class="profile-pic" id="current-user">
+				<i class="fas fa-user-circle fa-2x"></i>
+			</div>
+			<div class="comment-section">
+				<p class="grey-text comment-add grey-bott-border comment-add">Add a public comment...</p>
+			</div>
+		</div>
+
+		<!--Fake comments: -->
+		<div class="comment-details">
+			<div class="profile-pic pic1">
+			</div>
+			<div class="comment-section">
+				<a class="comment-author bold-text" href="#" target="_blank">Isidoro</a>
+				<p class="grey-text comment-date">1 year ago</p>
+				<p class="comment-text">This video helped me a lot! It was very easy to follow the instructions,
+					I managed to upload my project in no time, thank you so much!</p>
+				<div class="comment-interactions grey-text interact-options bold-text">
+					<i class="fas fa-thumbs-up"></i>
+					<p>4</p>
+					<i class="fas fa-thumbs-down"></i>
+					<p></p>
+					<p>REPLY</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="comment-details">
+			<div class="profile-pic pic2">
+			</div>
+			<div class="comment-section">
+				<a class="comment-author bold-text" href="#" target="_blank">A Surprised cat</a>
+				<p class="grey-text comment-date">3 months ago</p>
+				<p class="comment-text">What was that?! Will there be follow up videos?</p>
+				<div class="comment-interactions grey-text interact-options bold-text">
+					<i class="fas fa-thumbs-up"></i>
+					<p>2</p>
+					<i class="fas fa-thumbs-down"></i>
+					<p></p>
+					<p>REPLY</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="comment-details">
+			<div class="profile-pic pic3">
+			</div>
+			<div class="comment-section">
+				<a class="comment-author bold-text" href="#" target="_blank">A very honest cat</a>
+				<p class="grey-text comment-date">Yesterday</p>
+				<p class="comment-text">This is a cloned YouTube page, these comments are not real.
+					Everything is fake! But you already knew that, didn't you?</p>
+				<div class="comment-interactions grey-text interact-options bold-text">
+					<i class="fas fa-thumbs-up"></i>
+					<p>1</p>
+					<i class="fas fa-thumbs-down"></i>
+					<p></p>
+					<p>REPLY</p>
+				</div>
+			</div>
+		</div>
 
 		<!--side videos-->
 		<aside class="side-videos">
@@ -116,33 +214,7 @@
 
 		</aside>
 
-	
-	</main>
 
-
-
-	<footer >
-		<div>
-			<button type="button"><img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
-				" alt="youtube_logo" style="width:80px; height:20px;" class="youtube_logo" /></button>
-			<div class="dropdown">
-				<button class="dropbtn" disabled>Language: English
-					<i class="fa fa-caret-down"></i>
-				</button>
-			</div>
-			<div class="dropdown">
-				<button class="dropbtn" disabled>Location:Netherlands
-					<i class="fa fa-caret-down"></i>
-				</button>
-			</div>
-			<div class="dropdown">
-				<button class="dropbtn" disabled>Restricted Mode:Off
-					<i class="fa fa-caret-down"></i>
-				</button>
-			</div>
-			<button type="button"><i class="fas fa-hourglass-half"></i>History</button>
-		</div>
-	</footer>
 
 
 
