--- a/index.html
+++ b/index.html
@@ -16,38 +16,20 @@
 
 	<header>
 		<nav>
-			<ul>
-				<li>
-					<a href="#"><i class="fas fa-align-justify"></i></a>
-				</li>
-				<li>
-					<img src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png
-			" alt="youtube_logo" style="width:80px; height:20px;" id="youtube_logo" />
-				</li>
-				<li>
-					<form class="" action="index.html" method="post">
-						<input type="text" placeholder=" Search" />
-						<button type="button">
-							<i class="material-icons">search</i>
-						</button>
-					</form>
-				</li>
-				<li>
-					<a href="#"><i class="material-icons">video_call</i></a>
-				</li>
-				<li>
-					<a href="#"><i class="material-icons">apps</i></a>
-				</li>
-				<li>
-					<a href="#"><i class="material-icons">mail</i></a>
-				</li>
-				<li>
-					<a href="#"><i class="material-icons">notifications</i></a>
-				</li>
-				<li>
-					<a href="#"><i class="far fa-user-circle"></i></a>
-				</li>
-			</ul>
+			<div class="nav nav-left">
+				<button type="button" name="button"  class="fas fa-bars"></button>
+				<img class="nav-logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" alt="youtube logo">
+			</div>
+			<div class="nav_search_button">
+				<input type="text" name="input" id="search-bar" placeholder="Search">
+				<button type="button" class="search-button"><i class="fas fa-search"></i></button>
+			</div>
+			<div class="nav nav-right">
+				<button type="button" name="button" class="button fas fa-upload"></button>
+				<button type="button" name="button" class="button fas fa-th"></button>
+				<button type="button" name="button" class="button fas fa-bell"></button>
+				<img class="logo-right" src="https://miro.medium.com/max/3150/1*ymMI142YPuGSUCmZIs-EaA.png" alt="microverse logo">
+			</div>
 		</nav>
 	</header>
 	<main class="flex-conatainer">
@@ -62,7 +44,7 @@
 				<div class="title">
 					<h2 style=font-size:20px;> SHATTA WALE - Everybody Likes My Tin by PPV HD</h2>
 				</div>
-				<div class="interaction_buttons_left">
+				<div class="interaction_buttons_right">
 					<button type="button" class="fas fa-thumbs-up"></button>
 					<label>359</label>
 					<button type="button" class="fas fa-thumbs-down"></button>
@@ -79,7 +61,8 @@
 
 
 					<p><button type="button" id="subscribe-button">SUBSCRIBE</button></p>
-					<a id="singers-logo" href="#"><img src="#" alt="singers-logo" /> </a>
+					<a><img src="img/sh.png" alt="singers-logo" id="singers-logo"/> 
+				</a>
 					<p id="authors_text">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />
 						sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br />
@@ -99,74 +82,7 @@
 
 	<!--comments-->
 
-	<section class="comments-container">
-		<div class="comments-top">
-			<p class="categ-title">12 Comments</p>
-			<p class="grey-text bold-text"><i class="fas fa-sort-amount-up"></i>SORT BY</p>
-		</div>
-
-		<div class="comment-details">
-			<div class="profile-pic" id="current-user">
-				<i class="fas fa-user-circle fa-2x"></i>
-			</div>
-			<div class="comment-section">
-				<p class="grey-text comment-add grey-bott-border comment-add">Add a public comment...</p>
-			</div>
-		</div>
-
-		<!--Fake comments: -->
-		<div class="comment-details">
-			<div class="profile-pic pic1">
-			</div>
-			<div class="comment-section">
-				<a class="comment-author bold-text" href="#" target="_blank">Isidoro</a>
-				<p class="grey-text comment-date">1 year ago</p>
-				<p class="comment-text">This video helped me a lot! It was very easy to follow the instructions,
-					I managed to upload my project in no time, thank you so much!</p>
-				<div class="comment-interactions grey-text interact-options bold-text">
-					<i class="fas fa-thumbs-up"></i>
-					<p>4</p>
-					<i class="fas fa-thumbs-down"></i>
-					<p></p>
-					<p>REPLY</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="comment-details">
-			<div class="profile-pic pic2">
-			</div>
-			<div class="comment-section">
-				<a class="comment-author bold-text" href="#" target="_blank">A Surprised cat</a>
-				<p class="grey-text comment-date">3 months ago</p>
-				<p class="comment-text">What was that?! Will there be follow up videos?</p>
-				<div class="comment-interactions grey-text interact-options bold-text">
-					<i class="fas fa-thumbs-up"></i>
-					<p>2</p>
-					<i class="fas fa-thumbs-down"></i>
-					<p></p>
-					<p>REPLY</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="comment-details">
-			<div class="profile-pic pic3">
-			</div>
-			<div class="comment-section">
-				<a class="comment-author bold-text" href="#" target="_blank">A very honest cat</a>
-				<p class="grey-text comment-date">Yesterday</p>
-				<p class="comment-text">This is a cloned YouTube page, these comments are not real.
-					Everything is fake! But you already knew that, didn't you?</p>
-				<div class="comment-interactions grey-text interact-options bold-text">
-					<i class="fas fa-thumbs-up"></i>
-					<p>1</p>
-					<i class="fas fa-thumbs-down"></i>
-					<p></p>
-					<p>REPLY</p>
-				</div>
-			</div>
-		</div>
+	
 
 		<!--side videos-->
 		<aside class="side-videos">
@@ -213,9 +129,7 @@
 			</div>
 
 		</aside>
-
-
-
+		
 
 
 </body>
