--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	<header>
 		<nav>
 			<div class="nav nav-left">
-				<button type="button" name="button"  class="fas fa-bars"></button>
-				<img class="nav-logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" alt="youtube logo">
+				<button type="button" name="button" class="fas fa-bars"></button>
+				<img class="nav-logo" src="https://archive.ph/Bss88/51a3832e6af6792add876216da444db23a4bea96.png"
+					alt="youtube logo">
 			</div>
 			<div class="nav_search_button">
 				<input type="text" name="input" id="search-bar" placeholder="Search">
@@ -28,12 +29,15 @@
 				<button type="button" name="button" class="button fas fa-upload"></button>
 				<button type="button" name="button" class="button fas fa-th"></button>
 				<button type="button" name="button" class="button fas fa-bell"></button>
-				<img class="logo-right" src="https://miro.medium.com/max/3150/1*ymMI142YPuGSUCmZIs-EaA.png" alt="microverse logo">
+				<img class="logo-right" src="https://miro.medium.com/max/3150/1*ymMI142YPuGSUCmZIs-EaA.png"
+					alt="microverse logo">
 			</div>
 		</nav>
 	</header>
 	<main class="flex-conatainer">
+
 		<section class="video-section">
+			<h2> Main Video</h2>
 			<div class="main-video">
 				<iframe width="840" height="315" src="https://www.youtube.com/embed/48YW53TPbhw"
 					allowfullscreen></iframe>
@@ -61,8 +65,8 @@
 
 
 					<p><button type="button" id="subscribe-button">SUBSCRIBE</button></p>
-					<a><img src="img/sh.png" alt="singers-logo" id="singers-logo"/> 
-				</a>
+					<a><img src="img/sh.png" alt="singers-logo" id="singers-logo" />
+					</a>
 					<p id="authors_text">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br />
 						sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br />
@@ -82,54 +86,55 @@
 
 	<!--comments-->
 
-	
 
-		<!--side videos-->
-		<aside class="side-videos">
-			<h3> Up Next </h3>
-			<div class="recommended">
-				<img src="http://i3.ytimg.com/vi/ImTStSYnh-o/maxresdefault.jpg" height="94" width="168">
 
-				<div class="details">
-					<p>Title</p>
-					<p> Got Talent Global</p>
-					<p>Recommended for you</p>
-				</div>
+	<!--side videos-->
+	<aside class="side-videos">
+		<h3> Up Next </h3>
+		<div class="recommended">
+			<img src="http://i3.ytimg.com/vi/ImTStSYnh-o/maxresdefault.jpg" height="94" width="168"
+				alt="recommended videos" />
+
+			<div class="details">
+				<p>Title</p>
+				<p> Got Talent Global</p>
+				<p>Recommended for you</p>
 			</div>
+		</div>
 
-			<div class="recommended">
-				<img src="http://i3.ytimg.com/vi/tWg7xbTiDF4/maxresdefault.jpg" height="94" width="168">
+		<div class="recommended">
+			<img src="http://i3.ytimg.com/vi/tWg7xbTiDF4/maxresdefault.jpg" height="94" width="168" alt="side video" />
 
-				<div class="details">
-					<p>KiDi - Sugar (The Movie)</p>
-					<p>Lynx Entertainment</p>
-					<p>549K</p>
-				</div>
+			<div class="details">
+				<p>KiDi - Sugar (The Movie)</p>
+				<p>Lynx Entertainment</p>
+				<p>549K</p>
 			</div>
+		</div>
 
 
-			<div class="recommended">
-				<img src="http://i3.ytimg.com/vi/-DB3oND8hVA/maxresdefault.jpg" height="94" width="168">
+		<div class="recommended">
+			<img src="http://i3.ytimg.com/vi/-DB3oND8hVA/maxresdefault.jpg" height="94" width="168" alt="side video" />
 
-				<div class="details">
-					<p>Bosom P-Yung - Attaa Adwoa | A FLOWRHYTHMZ SHOW</p>
-					<p> Flowrhythmz</p>
-					<p>388 views</p>
-				</div>
+			<div class="details">
+				<p>Bosom P-Yung - Attaa Adwoa | A FLOWRHYTHMZ SHOW</p>
+				<p> Flowrhythmz</p>
+				<p>388 views</p>
 			</div>
+		</div>
 
-			<div class="recommended">
-				<img src="http://i3.ytimg.com/vi/rCymbQJxozI/maxresdefault.jpg" height="94" width="168">
+		<div class="recommended">
+			<img src="http://i3.ytimg.com/vi/rCymbQJxozI/maxresdefault.jpg" height="94" width="168" alt="side video" />
 
-				<div class="details">
-					<p>Joeboy - Don't Call Me Back (feat. Mayorkun) [Visualizer]</p>
-					<p> emPawa Africa</p>
-					<p>8.0M views</p>
-				</div>
+			<div class="details">
+				<p>Joeboy - Don't Call Me Back (feat. Mayorkun) [Visualizer]</p>
+				<p> emPawa Africa</p>
+				<p>8.0M views</p>
 			</div>
+		</div>
 
-		</aside>
-		
+	</aside>
+
 
 
 </body>
